fa/fac/_AntlrGens/FaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Fa.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class FaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		AImport=1, ALib=2, Break=3, CC__Cdecl=4, CC__FastCall=5, CC__StdCall=6, 
		Continue=7, Class=8, Const=9, Do=10, Else=11, Enum=12, FaMain=13, For=14, 
		If=15, Is=16, Internal=17, Mut=18, Namespace=19, New=20, Params=21, Public=22, 
		Protected=23, Private=24, Return=25, Signed=26, Static=27, Step=28, Switch=29, 
		Unsigned=30, Use=31, When=32, While=33, Assign=34, AddAssign=35, SubAssign=36, 
		StarAssign=37, DivAssign=38, ModAssign=39, OrAssign=40, AndAssign=41, 
		XorAssign=42, QusQusAssign=43, StarStarAssign=44, AndAndAssign=45, OrOrAssign=46, 
		ReverseOp=47, AddAddOp=48, SubSubOp=49, Exclam=50, PointPoint=51, PointOp=52, 
		AddOp=53, SubOp=54, StarOp=55, DivOp=56, ModOp=57, OrOp=58, AndOp=59, 
		XorOp=60, QusQusOp=61, StarStarOp=62, AndAndOp=63, OrOrOp=64, Qus=65, 
		Comma=66, ColonColon=67, Colon=68, Semi=69, Underline=70, QuotFangL=71, 
		QuotFangR=72, QuotJianL=73, QuotJianR=74, QuotHuaL=75, QuotHuaR=76, QuotYuanL=77, 
		QuotYuanR=78, BoolLiteral=79, IntLiteral=80, FloatLiteral=81, String1Literal=82, 
		RawId=83, Comment1=84, Comment2=85, WS=86;
	public const int
		RULE_shiftLAssign = 0, RULE_shiftRAssign = 1, RULE_allAssign = 2, RULE_shiftLOp = 3, 
		RULE_shiftROp = 4, RULE_ltOp = 5, RULE_ltEqualOp = 6, RULE_gtOp = 7, RULE_gtEqualOp = 8, 
		RULE_equalOp = 9, RULE_notEqualOp = 10, RULE_exprFuncDef = 11, RULE_selfOp2 = 12, 
		RULE_compareOp2 = 13, RULE_changeOp2 = 14, RULE_allOp2 = 15, RULE_intNum = 16, 
		RULE_floatNum = 17, RULE_literal = 18, RULE_id = 19, RULE_ids = 20, RULE_typeAfter = 21, 
		RULE_typeSingle = 22, RULE_typeMulti = 23, RULE_type = 24, RULE_typeVar = 25, 
		RULE_typeVarList = 26, RULE_typeVar2 = 27, RULE_typeVar2List = 28, RULE_quotStmtPart = 29, 
		RULE_quotStmtExpr = 30, RULE_ifStmt = 31, RULE_ifExpr = 32, RULE_whileStmt = 33, 
		RULE_whileStmt2 = 34, RULE_forStmt = 35, RULE_forStmt2 = 36, RULE_switchStmtPart2Last = 37, 
		RULE_quotStmtExprWrap = 38, RULE_switchExprPartLast = 39, RULE_switchStmtPart = 40, 
		RULE_switchStmt = 41, RULE_switchStmtPart2 = 42, RULE_switchStmt2 = 43, 
		RULE_switchExprPart = 44, RULE_switchExpr = 45, RULE_switchExprPart2 = 46, 
		RULE_switchExpr2 = 47, RULE_quotExpr = 48, RULE_exprOpt = 49, RULE_newExprItem = 50, 
		RULE_newExpr1 = 51, RULE_newExpr2 = 52, RULE_arrayExpr1 = 53, RULE_arrayExpr2 = 54, 
		RULE_lambdaExpr = 55, RULE_strongExprBase = 56, RULE_strongExprPrefix = 57, 
		RULE_strongExprSuffix = 58, RULE_strongExpr = 59, RULE_middleExpr = 60, 
		RULE_expr = 61, RULE_tmpAssignExpr = 62, RULE_idAssignExpr = 63, RULE_defVarStmt = 64, 
		RULE_normalStmt = 65, RULE_stmt = 66, RULE_publicLevel = 67, RULE_classTemplates = 68, 
		RULE_classParent = 69, RULE_enumStmt = 70, RULE_classStmt = 71, RULE_classVarExtFunc = 72, 
		RULE_classVarExt = 73, RULE_classVar = 74, RULE_classFuncName = 75, RULE_classFuncBody = 76, 
		RULE_classFunc = 77, RULE_classEnumItem = 78, RULE_useStmt = 79, RULE_callConvention = 80, 
		RULE_importStmt = 81, RULE_libStmt = 82, RULE_namespaceStmt = 83, RULE_program = 84;
	public static readonly string[] ruleNames = {
		"shiftLAssign", "shiftRAssign", "allAssign", "shiftLOp", "shiftROp", "ltOp", 
		"ltEqualOp", "gtOp", "gtEqualOp", "equalOp", "notEqualOp", "exprFuncDef", 
		"selfOp2", "compareOp2", "changeOp2", "allOp2", "intNum", "floatNum", 
		"literal", "id", "ids", "typeAfter", "typeSingle", "typeMulti", "type", 
		"typeVar", "typeVarList", "typeVar2", "typeVar2List", "quotStmtPart", 
		"quotStmtExpr", "ifStmt", "ifExpr", "whileStmt", "whileStmt2", "forStmt", 
		"forStmt2", "switchStmtPart2Last", "quotStmtExprWrap", "switchExprPartLast", 
		"switchStmtPart", "switchStmt", "switchStmtPart2", "switchStmt2", "switchExprPart", 
		"switchExpr", "switchExprPart2", "switchExpr2", "quotExpr", "exprOpt", 
		"newExprItem", "newExpr1", "newExpr2", "arrayExpr1", "arrayExpr2", "lambdaExpr", 
		"strongExprBase", "strongExprPrefix", "strongExprSuffix", "strongExpr", 
		"middleExpr", "expr", "tmpAssignExpr", "idAssignExpr", "defVarStmt", "normalStmt", 
		"stmt", "publicLevel", "classTemplates", "classParent", "enumStmt", "classStmt", 
		"classVarExtFunc", "classVarExt", "classVar", "classFuncName", "classFuncBody", 
		"classFunc", "classEnumItem", "useStmt", "callConvention", "importStmt", 
		"libStmt", "namespaceStmt", "program"
	};

	private static readonly string[] _LiteralNames = {
		null, "'@import'", "'@lib'", "'break'", "'__cdecl'", "'__fastcall'", "'__stdcall'", 
		"'continue'", "'class'", "'const'", "'do'", "'else'", "'enum'", "'FaMain'", 
		"'for'", "'if'", "'is'", "'internal'", "'mut'", "'namespace'", "'new'", 
		"'params'", "'public'", "'protected'", "'private'", "'return'", "'signed'", 
		"'static'", "'step'", "'switch'", "'unsigned'", "'use'", "'when'", "'while'", 
		"'='", null, null, null, null, null, null, null, null, null, null, null, 
		null, "'~'", "'++'", "'--'", "'!'", "'..'", "'.'", "'+'", "'-'", "'*'", 
		"'/'", "'%'", "'|'", "'&'", "'^'", null, null, null, null, "'?'", "','", 
		"'::'", "':'", "';'", "'_'", "'['", "']'", "'<'", "'>'", "'{'", "'}'", 
		"'('", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AImport", "ALib", "Break", "CC__Cdecl", "CC__FastCall", "CC__StdCall", 
		"Continue", "Class", "Const", "Do", "Else", "Enum", "FaMain", "For", "If", 
		"Is", "Internal", "Mut", "Namespace", "New", "Params", "Public", "Protected", 
		"Private", "Return", "Signed", "Static", "Step", "Switch", "Unsigned", 
		"Use", "When", "While", "Assign", "AddAssign", "SubAssign", "StarAssign", 
		"DivAssign", "ModAssign", "OrAssign", "AndAssign", "XorAssign", "QusQusAssign", 
		"StarStarAssign", "AndAndAssign", "OrOrAssign", "ReverseOp", "AddAddOp", 
		"SubSubOp", "Exclam", "PointPoint", "PointOp", "AddOp", "SubOp", "StarOp", 
		"DivOp", "ModOp", "OrOp", "AndOp", "XorOp", "QusQusOp", "StarStarOp", 
		"AndAndOp", "OrOrOp", "Qus", "Comma", "ColonColon", "Colon", "Semi", "Underline", 
		"QuotFangL", "QuotFangR", "QuotJianL", "QuotJianR", "QuotHuaL", "QuotHuaR", 
		"QuotYuanL", "QuotYuanR", "BoolLiteral", "IntLiteral", "FloatLiteral", 
		"String1Literal", "RawId", "Comment1", "Comment2", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Fa.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ShiftLAssignContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShiftLOpContext shiftLOp() {
			return GetRuleContext<ShiftLOpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(FaParser.Assign, 0); }
		public ShiftLAssignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shiftLAssign; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShiftLAssign(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShiftLAssignContext shiftLAssign() {
		ShiftLAssignContext _localctx = new ShiftLAssignContext(Context, State);
		EnterRule(_localctx, 0, RULE_shiftLAssign);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 170;
			shiftLOp();
			State = 171;
			Match(Assign);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShiftRAssignContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ShiftROpContext shiftROp() {
			return GetRuleContext<ShiftROpContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(FaParser.Assign, 0); }
		public ShiftRAssignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shiftRAssign; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShiftRAssign(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShiftRAssignContext shiftRAssign() {
		ShiftRAssignContext _localctx = new ShiftRAssignContext(Context, State);
		EnterRule(_localctx, 2, RULE_shiftRAssign);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 173;
			shiftROp();
			State = 174;
			Match(Assign);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AllAssignContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(FaParser.Assign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QusQusAssign() { return GetToken(FaParser.QusQusAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AddAssign() { return GetToken(FaParser.AddAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SubAssign() { return GetToken(FaParser.SubAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StarAssign() { return GetToken(FaParser.StarAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode StarStarAssign() { return GetToken(FaParser.StarStarAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DivAssign() { return GetToken(FaParser.DivAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ModAssign() { return GetToken(FaParser.ModAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AndAssign() { return GetToken(FaParser.AndAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OrAssign() { return GetToken(FaParser.OrAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode XorAssign() { return GetToken(FaParser.XorAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode AndAndAssign() { return GetToken(FaParser.AndAndAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OrOrAssign() { return GetToken(FaParser.OrOrAssign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ShiftLAssignContext shiftLAssign() {
			return GetRuleContext<ShiftLAssignContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShiftRAssignContext shiftRAssign() {
			return GetRuleContext<ShiftRAssignContext>(0);
		}
		public AllAssignContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_allAssign; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAllAssign(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AllAssignContext allAssign() {
		AllAssignContext _localctx = new AllAssignContext(Context, State);
		EnterRule(_localctx, 4, RULE_allAssign);
		try {
			State = 191;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Assign:
				EnterOuterAlt(_localctx, 1);
				{
				State = 176;
				Match(Assign);
				}
				break;
			case QusQusAssign:
				EnterOuterAlt(_localctx, 2);
				{
				State = 177;
				Match(QusQusAssign);
				}
				break;
			case AddAssign:
				EnterOuterAlt(_localctx, 3);
				{
				State = 178;
				Match(AddAssign);
				}
				break;
			case SubAssign:
				EnterOuterAlt(_localctx, 4);
				{
				State = 179;
				Match(SubAssign);
				}
				break;
			case StarAssign:
				EnterOuterAlt(_localctx, 5);
				{
				State = 180;
				Match(StarAssign);
				}
				break;
			case StarStarAssign:
				EnterOuterAlt(_localctx, 6);
				{
				State = 181;
				Match(StarStarAssign);
				}
				break;
			case DivAssign:
				EnterOuterAlt(_localctx, 7);
				{
				State = 182;
				Match(DivAssign);
				}
				break;
			case ModAssign:
				EnterOuterAlt(_localctx, 8);
				{
				State = 183;
				Match(ModAssign);
				}
				break;
			case AndAssign:
				EnterOuterAlt(_localctx, 9);
				{
				State = 184;
				Match(AndAssign);
				}
				break;
			case OrAssign:
				EnterOuterAlt(_localctx, 10);
				{
				State = 185;
				Match(OrAssign);
				}
				break;
			case XorAssign:
				EnterOuterAlt(_localctx, 11);
				{
				State = 186;
				Match(XorAssign);
				}
				break;
			case AndAndAssign:
				EnterOuterAlt(_localctx, 12);
				{
				State = 187;
				Match(AndAndAssign);
				}
				break;
			case OrOrAssign:
				EnterOuterAlt(_localctx, 13);
				{
				State = 188;
				Match(OrOrAssign);
				}
				break;
			case QuotJianL:
				EnterOuterAlt(_localctx, 14);
				{
				State = 189;
				shiftLAssign();
				}
				break;
			case QuotJianR:
				EnterOuterAlt(_localctx, 15);
				{
				State = 190;
				shiftRAssign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShiftLOpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] QuotJianL() { return GetTokens(FaParser.QuotJianL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuotJianL(int i) {
			return GetToken(FaParser.QuotJianL, i);
		}
		public ShiftLOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shiftLOp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShiftLOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShiftLOpContext shiftLOp() {
		ShiftLOpContext _localctx = new ShiftLOpContext(Context, State);
		EnterRule(_localctx, 6, RULE_shiftLOp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 193;
			Match(QuotJianL);
			State = 194;
			Match(QuotJianL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ShiftROpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] QuotJianR() { return GetTokens(FaParser.QuotJianR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuotJianR(int i) {
			return GetToken(FaParser.QuotJianR, i);
		}
		public ShiftROpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_shiftROp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitShiftROp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ShiftROpContext shiftROp() {
		ShiftROpContext _localctx = new ShiftROpContext(Context, State);
		EnterRule(_localctx, 8, RULE_shiftROp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 196;
			Match(QuotJianR);
			State = 197;
			Match(QuotJianR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LtOpContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QuotJianL() { return GetToken(FaParser.QuotJianL, 0); }
		public LtOpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ltOp; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFaVisitor<TResult> typedVisitor = visitor as IFaVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLtOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LtOpContext ltOp() {
		LtOpContext _localctx = new LtOpContext(Context, State);
		EnterRule(_localctx, 10, RULE_ltOp);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 199;
			Match(QuotJianL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
